--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     width: 100%;
-    background-color: #0c111b;
+    background-color: #2c323b;
     position: relative;
     font-family: 'Ubuntu', sans-serif;
 }
@@ -18,7 +18,7 @@ body {
     top: 0;
     left: 0;
     padding: 0 4%;
-    background: #0c111b;
+    background: 2c323b;
     z-index: 9;
     display: flex;
     align-items: center;
@@ -194,3 +194,111 @@ body {
 .video-card:hover .card-video {
     display: flex;
 }
+
+.title {
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    padding-left: 4%;
+    opacity: 0.9;
+}
+
+.channel-list {
+    width: 100%;
+    height: 340px;
+    position: relative;
+    margin: 10px 0 20px;
+    padding-inline: 4%;
+}
+
+.card-container {
+    position: absolute;
+    width: 92%;
+    padding-left: 10px;
+    height: 340px;
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: visible;
+    scroll-behavior: smooth;
+}
+
+.card-container::-webkit-scrollbar{
+    display: none;
+}
+
+.card {
+    position: relative;
+    min-width: 240px;
+    width: 240px;
+    height: 320px;
+    border-radius: 15px;
+    overflow: hidden;
+    margin-right: 10px;
+    transform: .5s;
+    background: #000;
+}
+
+.card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card:hover {
+    transform: scale(1.1);
+}
+
+.card:hover  .card-body{
+    opacity: 1;
+}
+
+.card-body {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background: linear-gradient(to bottom, rgba(4,8,15,0), #192133 90%);
+    padding: 10px;
+    transition: .5s;
+}
+
+.name {
+    color: #fff;
+    margin-top: 60%;
+    font-size: 30px;
+}
+
+.des {
+    color: #fff;
+    font-size: 26px;
+    margin: 5px 0;
+    opacity: 0.7;
+    font-weight: 200;
+}
+
+.watchlist-btn {
+    position: absolute;
+    width: 90%;
+    text-transform: capitalize;
+    background: none;
+    border: none;
+    font-weight: 600;
+    font-size: 24px;
+    color: #fff;
+    opacity: 0.5;
+    cursor: pointer;
+    padding: 10px 5px;
+    border-radius: 15px;
+}
+
+.watchlist-btn:hover {
+    color: #fff;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+
